Review issue 779 unit test

--- a/tests/data/html/issue779.html
+++ b/tests/data/html/issue779.html
@@ -157,8 +157,6 @@
         <td class="center" colspan="26"><strong>Grades</strong></td>
     </tr>
     <tr>
-    </tr>
-    <tr>
         <td>0000</td>
         <td>STUDENT NAME</td>
         <td class="center">8.00</td>
@@ -234,12 +232,12 @@
             <strong>Course secretary signature</strong>
         </td>
     </tr>
-    <tr lenght="70">
+    <tr>
         <td class="center" colspan="11" style="padding: 30px">
         </td>
-        <td class="center" colspan="10" rowspan="3">
+        <td class="center" colspan="10">
         </td>
-        <td class="center" colspan="10" rowspan="3">
+        <td class="center" colspan="10">
         </td>
     </tr>
     </tbody>
